[tool.poetry]
name = "eq_catalogs"
version = "0.1.0"
description = "Tools for map, filter, reduce of earthquake catalogs."
authors = ["Kathryn Materna <kmaterna@berkeley.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kmaterna/eq_catalogs"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.20"
matplotlib = ">=3.4"
pygmt = ">0.8"
pandas = "*"
Tectonic-Utils = "^0.1.0"


[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
